# obsidian-lib

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
