[package]
name = "obsidian-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wry = "0.41.6"  # Aktualna wersja Wry (używanego w Tauri dla WebView)
tao = "0.28.2"  # Windowing library używana w Tauri
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2"

[build-dependencies]
# Opcjonalnie dla custom build, ale niekoniecznie
